[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clokwerk = "0.3.5"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde = { version = "1.0.136", features = ["derive"] }
